--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
+    "react-collapsed": "^3.3.1",
     "react-datepicker": "^4.7.0",
     "react-number-format": "^4.9.3",
     "react-select": "^5.3.0",
@@ -74,19 +75,19 @@
     "@fortawesome/pro-solid-svg-icons": "^6.1.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
-    "@storybook/addon-a11y": "^6.4.22",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-interactions": "^6.4.22",
-    "@storybook/addon-links": "^6.4.22",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-storysource": "^6.4.22",
-    "@storybook/builder-webpack5": "^6.4.22",
-    "@storybook/manager-webpack5": "^6.4.22",
-    "@storybook/react": "^6.4.22",
-    "@storybook/testing-library": "^0.0.11",
-    "@testing-library/react": "^12.1.5",
-    "@testing-library/react-hooks": "^8.0.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@storybook/addon-a11y": "6.4.22",
+    "@storybook/addon-essentials": "6.4.22",
+    "@storybook/addon-interactions": "6.4.22",
+    "@storybook/addon-links": "6.4.22",
+    "@storybook/addon-postcss": "2.0.0",
+    "@storybook/addon-storysource": "6.4.22",
+    "@storybook/builder-webpack5": "6.4.22",
+    "@storybook/manager-webpack5": "6.4.22",
+    "@storybook/react": "6.4.22",
+    "@storybook/testing-library": "0.0.11",
+    "@testing-library/react": "12.1.5",
+    "@testing-library/react-hooks": "8.0.0",
+    "@testing-library/user-event": "13.5.0",
     "@types/color-rgba": "^2.1.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^14",
