--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "peerDependencies": {
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "5.3.3",
     "suneditor": "^2.43.0",
     "tippy.js": "^6.3.1"
   },
@@ -95,6 +95,7 @@
     "@types/react": "^16.9.56",
     "@types/react-datepicker": "^4.4.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "babel-loader": "^8.2.4",
