--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@szhsin/react-menu": "^3.0.0",
+    "@szhsin/react-menu": "3.1.0",
     "@tippyjs/react": "^4.2.6",
     "classnames": "^2.3.1",
     "color-alpha": "^1.1.3",
