--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@szhsin/react-menu": "^3.0.0",
+    "@szhsin/react-menu": "3.1.0",
     "@tippyjs/react": "^4.2.6",
     "classnames": "^2.3.1",
     "color-alpha": "^1.1.3",
@@ -62,11 +62,14 @@
     "yup": "^0.32.11"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "^16.14.0 || ^17.0.0",
+    "react-dom": "^16.14.0 || ^17.0.0",
     "react-router-dom": "5.3.3",
     "suneditor": "^2.43.0",
     "tippy.js": "^6.3.1"
+  },
+  "engines": {
+    "node": ">=16.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
@@ -92,7 +95,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^14",
     "@types/numeral": "^2.0.2",
-    "@types/react": "^16.9.56",
+    "@types/react": "16.14.28",
     "@types/react-datepicker": "^4.4.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.3.3",
@@ -125,8 +128,5 @@
     "ts-loader": "^8.0.11",
     "typescript": "^4.6.3",
     "webpack": "^5.72.0"
-  },
-  "engines": {
-    "node": ">=14.0.0"
   }
 }
