--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghost-design-system",
   "license": "MIT",
-  "version": "1.4.10-next.8",
+  "version": "1.4.10-next.9",
   "description": "Ghost design system - React Component Library",
   "author": {
     "name": "Charles Coqueret",
@@ -55,6 +55,7 @@
     "numeral": "^2.0.6",
     "react-collapsed": "^3.3.1",
     "react-datepicker": "^4.7.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-number-format": "^4.9.3",
     "react-select": "^5.3.0",
     "suneditor": "^2.43.0",
@@ -98,6 +99,7 @@
     "@types/react": "16.14.28",
     "@types/react-datepicker": "^4.4.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
