--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghost-design-system",
   "license": "MIT",
-  "version": "1.4.10-next.9",
+  "version": "1.4.10-next.10",
   "description": "Ghost design system - React Component Library",
   "author": {
     "name": "Charles Coqueret",
@@ -43,40 +43,40 @@
   "types": "dist/index.d.ts",
   "style": "dist/ghost-design-system.min.css",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@szhsin/react-menu": "3.1.0",
-    "@tippyjs/react": "^4.2.6",
-    "classnames": "^2.3.1",
+    "@szhsin/react-menu": "3.1.1",
+    "@tippyjs/react": "4.2.6",
+    "classnames": "2.3.1",
     "color-alpha": "^1.1.3",
     "color-rgba": "^2.4.0",
     "date-fns": "^2.28.0",
-    "lodash": "^4.17.21",
-    "numeral": "^2.0.6",
+    "lodash": "4.17.21",
+    "numeral": "2.0.6",
     "react-collapsed": "^3.3.1",
-    "react-datepicker": "^4.7.0",
-    "react-infinite-scroller": "^1.2.6",
+    "react-datepicker": "4.7.0",
+    "react-infinite-scroller": "1.2.6",
     "react-number-format": "^4.9.3",
     "react-select": "^5.3.0",
-    "suneditor": "^2.43.0",
-    "suneditor-react": "^3.4.0",
-    "yup": "^0.32.11"
+    "suneditor": "2.43.0",
+    "suneditor-react": "3.4.0",
+    "yup": "0.32.11"
   },
   "peerDependencies": {
     "react": "^16.14.0 || ^17.0.0",
     "react-dom": "^16.14.0 || ^17.0.0",
     "react-router-dom": "5.3.3",
     "suneditor": "^2.43.0",
-    "tippy.js": "^6.3.1"
+    "tippy.js": "6.3.1"
   },
   "engines": {
     "node": ">=16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.9",
-    "@fortawesome/pro-light-svg-icons": "^6.1.1",
-    "@fortawesome/pro-regular-svg-icons": "^6.1.1",
-    "@fortawesome/pro-solid-svg-icons": "^6.1.1",
+    "@fortawesome/pro-light-svg-icons": "6.1.1",
+    "@fortawesome/pro-regular-svg-icons": "6.1.1",
+    "@fortawesome/pro-solid-svg-icons": "6.1.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@storybook/addon-a11y": "6.5.8",
@@ -116,8 +116,8 @@
     "jest-canvas-mock": "^2.3.1",
     "license-checker": "^25.0.1",
     "prettier": "^2.6.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "rollup": "^2.70.2",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
