--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghost-design-system",
   "license": "MIT",
-  "version": "1.4.10-next.31",
+  "version": "1.4.10-next.32",
   "description": "Ghost design system - React Component Library",
   "author": {
     "name": "Charles Coqueret",
@@ -58,7 +58,8 @@
     "react-infinite-scroller": "1.2.6",
     "react-number-format": "^4.9.3",
     "react-select": "^5.3.0",
-    "suneditor": "2.43.0",
+    "react-textarea-autosize": "^8.3.4",
+    "suneditor": "^2.43.0",
     "suneditor-react": "3.4.0",
     "yup": "0.32.11"
   },
