--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghost-design-system",
   "license": "MIT",
-  "version": "1.4.10-next.34",
+  "version": "1.4.10-next.35",
   "description": "Ghost design system - React Component Library",
   "author": {
     "name": "Charles Coqueret",
@@ -47,16 +47,17 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@szhsin/react-menu": "3.2.1",
     "@tippyjs/react": "4.2.6",
+    "axios": "1.1.3",
     "classnames": "2.3.2",
     "color-alpha": "1.1.3",
     "color-rgba": "2.4.0",
     "date-fns": "2.29.3",
     "lodash": "4.17.21",
     "numeral": "2.0.6",
-    "react-collapsed": "3.5.0",
+    "react-collapsed": "3.3.2",
     "react-datepicker": "4.8.0",
     "react-infinite-scroller": "1.2.6",
-    "react-number-format": "^4.9.4",
+    "react-number-format": "4.9.4",
     "react-select": "5.6.0",
     "react-textarea-autosize": "8.4.0",
     "suneditor": "2.44.3",
@@ -94,14 +95,14 @@
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "13.5.0",
     "@types/color-rgba": "2.1.0",
-    "@types/jest": "^29.2.2",
+    "@types/jest": "29.2.2",
     "@types/node": "14",
     "@types/numeral": "2.0.2",
     "@types/react": "16",
     "@types/react-datepicker": "4.8.0",
     "@types/react-dom": "16",
     "@types/react-infinite-scroller": "1.2.3",
-    "@types/react-router-dom": "^5.3.3",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "5.42.1",
     "@typescript-eslint/parser": "5.42.1",
     "babel-loader": "9.1.0",
