--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react-infinite-scroller": "1.2.6",
     "react-intersection-observer": "9.4.1",
     "react-number-format": "4.9.4",
-    "react-query": "^3.39.2",
+    "react-query": "3.39.2",
     "react-select": "5.6.0",
     "react-textarea-autosize": "8.4.0",
     "suneditor": "2.44.3",
@@ -102,6 +102,7 @@
     "@types/react": "16",
     "@types/react-datepicker": "4.8.0",
     "@types/react-dom": "16",
+    "@types/react-infinite-scroller": "1.2.3",
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "5.42.1",
     "@typescript-eslint/parser": "5.42.1",
