--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@szhsin/react-menu": "3.2.1",
     "@tippyjs/react": "4.2.6",
-    "axios": "1.1.3",
     "classnames": "2.3.2",
     "color-alpha": "1.1.3",
     "color-rgba": "2.4.0",
@@ -57,7 +56,9 @@
     "react-collapsed": "3.3.2",
     "react-datepicker": "4.8.0",
     "react-infinite-scroller": "1.2.6",
+    "react-intersection-observer": "9.4.1",
     "react-number-format": "4.9.4",
+    "react-query": "3.39.2",
     "react-select": "5.6.0",
     "react-textarea-autosize": "8.4.0",
     "suneditor": "2.44.3",
