--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "numeral": "2.0.6",
     "react-collapsed": "3.3.2",
     "react-datepicker": "4.8.0",
+    "react-hot-toast": "^2.4.0",
     "react-infinite-scroller": "1.2.6",
     "react-intersection-observer": "9.4.1",
     "react-number-format": "4.9.4",
