--- a/package.json
+++ b/package.json
@@ -43,21 +43,21 @@
   "types": "dist/index.d.ts",
   "style": "dist/ghost-design-system.css",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.2.0",
+    "@fortawesome/fontawesome-svg-core": "6.3.0",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@szhsin/react-menu": "3.2.1",
+    "@szhsin/react-menu": "3.5.0",
     "@tippyjs/react": "4.2.6",
     "classnames": "2.3.2",
     "date-fns": "2.29.3",
     "lodash": "4.17.21",
     "numeral": "2.0.6",
-    "react-collapsed": "3.3.2",
+    "react-collapsed": "3.6.0",
     "react-datepicker": "4.8.0",
     "react-hot-toast": "2.4.0",
     "react-infinite-scroller": "1.2.6",
-    "react-intersection-observer": "9.4.1",
+    "react-intersection-observer": "9.4.3",
     "react-number-format": "4.9.4",
-    "react-query": "3.39.2",
+    "react-query": "3.39.3",
     "react-select": "5.7.0",
     "react-textarea-autosize": "8.4.0",
     "suneditor": "2.44.3",
@@ -74,28 +74,29 @@
     "node": ">=16.8.0"
   },
   "devDependencies": {
-    "@babel/core": "7.20.2",
-    "@fortawesome/pro-light-svg-icons": "6.2.0",
-    "@fortawesome/pro-regular-svg-icons": "6.2.0",
-    "@fortawesome/pro-solid-svg-icons": "6.2.0",
+    "@babel/core": "7.21.0",
+    "@fortawesome/pro-light-svg-icons": "6.3.0",
+    "@fortawesome/pro-regular-svg-icons": "6.3.0",
+    "@fortawesome/pro-solid-svg-icons": "6.3.0",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@storybook/addon-a11y": "6.5.13",
-    "@storybook/addon-actions": "6.5.13",
-    "@storybook/addon-essentials": "6.5.13",
-    "@storybook/addon-interactions": "6.5.13",
-    "@storybook/addon-links": "6.5.13",
+    "@storybook/addon-a11y": "6.5.16",
+    "@storybook/addon-actions": "6.5.16",
+    "@storybook/addon-essentials": "6.5.16",
+    "@storybook/addon-interactions": "6.5.16",
+    "@storybook/addon-links": "6.5.16",
     "@storybook/addon-postcss": "2.0.0",
-    "@storybook/addon-storysource": "6.5.13",
-    "@storybook/builder-webpack5": "6.5.13",
-    "@storybook/manager-webpack5": "6.5.13",
-    "@storybook/react": "6.5.13",
+    "@storybook/addon-storysource": "6.5.16",
+    "@storybook/builder-webpack5": "6.5.16",
+    "@storybook/manager-webpack5": "6.5.16",
+    "@storybook/react": "6.5.16",
     "@storybook/testing-library": "0.0.13",
+    "@testing-library/dom": "^9.0.0",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "13.5.0",
-    "@types/jest": "29.2.2",
+    "@types/jest": "29.4.0",
     "@types/node": "14",
     "@types/numeral": "2.0.2",
     "@types/react": "16",
@@ -103,35 +104,35 @@
     "@types/react-dom": "16",
     "@types/react-infinite-scroller": "1.2.3",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "5.42.1",
-    "@typescript-eslint/parser": "5.42.1",
-    "babel-loader": "9.1.0",
-    "css-loader": "6.7.1",
-    "eslint": "8.27.0",
-    "eslint-config-prettier": "8.5.0",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
+    "babel-loader": "9.1.2",
+    "css-loader": "6.7.3",
+    "eslint": "8.34.0",
+    "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-storybook": "0.6.7",
+    "eslint-plugin-storybook": "0.6.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.3.1",
     "jest-canvas-mock": "2.4.0",
-    "jest-environment-jsdom": "29.3.1",
+    "jest-environment-jsdom": "29.4.3",
     "license-checker": "25.0.1",
-    "prettier": "2.7.1",
+    "prettier": "2.8.4",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-router-dom": "5.3.4",
-    "rollup": "3.3.0",
+    "rollup": "3.17.3",
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "sass": "1.56.1",
+    "sass": "1.58.3",
     "sass-loader": "13.2.0",
     "style-loader": "3.3.1",
-    "ts-jest": "29.0.3",
-    "ts-loader": "9.4.1",
-    "typescript": "<4.8",
+    "ts-jest": "29.0.5",
+    "ts-loader": "9.4.2",
+    "typescript": "^4.9",
     "webpack": "5.75.0"
   }
 }
