--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "types": "dist/dist/index.d.ts",
+  "types": "dist/index.d.ts",
   "style": "dist/ghost-design-system.css",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.3.0",
@@ -126,7 +126,6 @@
     "react-dom": "16.14.0",
     "react-router-dom": "5.3.4",
     "rollup": "3.17.3",
-    "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-postcss": "4.0.2",
     "sass": "1.58.3",
@@ -134,7 +133,7 @@
     "style-loader": "3.3.1",
     "ts-jest": "29.0.5",
     "ts-loader": "9.4.2",
-    "typescript": "4.9",
+    "typescript": "<4.8",
     "webpack": "5.75.0"
   }
 }
