--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "declaration": true,
-    "declarationDir": "./dist",
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
@@ -16,7 +15,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noErrorTruncation": true,
-    "outDir": "./dist",
+    "outDir": "dist",
     "pretty": true,
     "sourceMap": true,
     "strict": true,
