--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "build:css": "sass src/assets/index.scss dist/ghost-design-system.css --load-path=./node_modules/ --error-css --stop-on-error",
     "clean": "rm -rf npm-*.log package-lock.json node_modules coverage dist docs-build",
     "license": "license-checker --production --relativeLicensePath --csv --out ./THIRD-PARTY.txt",
-    "lint": "eslint --color ./",
-    "lint:debug": "DEBUG=eslint:cli-engine eslint --color ./",
-    "lint:fix": "eslint --fix --color ./",
+    "lint": "npx eslint --color ./",
+    "lint:debug": "DEBUG=eslint:cli-engine npm run lint",
+    "lint:fix": "npm run lint -- --fix",
     "nuke": "npm run clean && npm install",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "jest",
@@ -80,7 +80,7 @@
     "@fortawesome/pro-solid-svg-icons": "6.3.0",
     "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-node-resolve": "15.0.1",
-    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-terser": "0.4.0",
     "@rollup/plugin-typescript": "11.0.0",
     "@storybook/addon-a11y": "6.5.16",
     "@storybook/addon-actions": "6.5.16",
@@ -107,7 +107,7 @@
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "5.53.0",
     "@typescript-eslint/parser": "5.53.0",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "10.4.13",
     "babel-loader": "9.1.2",
     "css-loader": "6.7.3",
     "eslint": "8.34.0",
