--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   ],
   "scripts": {
     "build": "rm -rf dist && rollup -c && npm run build:css",
-    "build-storybook": "build-storybook -o docs-build",
+    "build-storybook": "storybook build -o docs-build",
     "build:css": "sass src/assets/index.scss dist/ghost-design-system.css --load-path=./node_modules/ --error-css --stop-on-error",
     "clean": "rm -rf npm-*.log package-lock.json node_modules coverage dist docs-build",
     "license": "license-checker --production --relativeLicensePath --csv --out ./THIRD-PARTY.txt",
@@ -33,7 +33,7 @@
     "lint:debug": "DEBUG=eslint:cli-engine npm run lint",
     "lint:fix": "npm run lint -- --fix",
     "nuke": "npm run clean && npm install",
-    "storybook": "start-storybook -p 9001 -c .storybook",
+    "storybook": "storybook dev -p 9001 -c .storybook",
     "test": "jest",
     "test:coverage": "jest --colors --coverage",
     "test:watch": "jest --watch"
@@ -51,7 +51,7 @@
     "date-fns": "2.29.3",
     "lodash": "4.17.21",
     "numeral": "2.0.6",
-    "react-collapsed": "4.0.1",
+    "react-collapsed": "4.0.2",
     "react-datepicker": "4.11.0",
     "react-hot-toast": "2.4.0",
     "react-infinite-scroller": "1.2.6",
@@ -60,7 +60,7 @@
     "react-query": "3.39.3",
     "react-select": "5.7.2",
     "react-textarea-autosize": "8.4.1",
-    "suneditor": "2.44.6",
+    "suneditor": "2.44.8",
     "suneditor-react": "3.4.1",
     "tippy.js": "6.3.7",
     "yup": "1.0.2"
@@ -75,29 +75,29 @@
   },
   "devDependencies": {
     "@babel/core": "7.21.4",
+    "@babel/preset-env": "7.21.4",
+    "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.21.4",
     "@fortawesome/pro-light-svg-icons": "6.4.0",
     "@fortawesome/pro-regular-svg-icons": "6.4.0",
     "@fortawesome/pro-solid-svg-icons": "6.4.0",
     "@rollup/plugin-commonjs": "24.0.1",
-    "@rollup/plugin-node-resolve": "15.0.1",
-    "@rollup/plugin-terser": "0.4.0",
-    "@rollup/plugin-typescript": "11.0.0",
-    "@storybook/addon-a11y": "6.5.16",
-    "@storybook/addon-actions": "6.5.16",
-    "@storybook/addon-essentials": "6.5.16",
-    "@storybook/addon-interactions": "6.5.16",
-    "@storybook/addon-links": "6.5.16",
-    "@storybook/addon-postcss": "2.0.0",
-    "@storybook/addon-storysource": "6.5.16",
-    "@storybook/builder-webpack5": "6.5.16",
-    "@storybook/manager-webpack5": "6.5.16",
-    "@storybook/react": "6.5.16",
-    "@storybook/testing-library": "0.0.13",
+    "@rollup/plugin-node-resolve": "15.0.2",
+    "@rollup/plugin-terser": "0.4.1",
+    "@rollup/plugin-typescript": "11.1.0",
+    "@storybook/addon-a11y": "7.0.2",
+    "@storybook/addon-essentials": "7.0.2",
+    "@storybook/addon-interactions": "7.0.2",
+    "@storybook/addon-links": "7.0.2",
+    "@storybook/addon-storysource": "7.0.2",
+    "@storybook/react": "7.0.2",
+    "@storybook/react-webpack5": "7.0.2",
+    "@storybook/testing-library": "0.1.0",
     "@testing-library/dom": "9.0.0",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/user-event": "13.5.0",
-    "@types/jest": "29.4.0",
+    "@types/jest": "29.5.0",
     "@types/node": "14",
     "@types/numeral": "2.0.2",
     "@types/react": "16",
@@ -110,7 +110,7 @@
     "autoprefixer": "10.4.14",
     "babel-loader": "9.1.2",
     "css-loader": "6.7.3",
-    "eslint": "8.37.0",
+    "eslint": "8.38.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
@@ -129,12 +129,13 @@
     "rollup": "3.20.2",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-postcss": "4.0.2",
-    "sass": "1.60.0",
+    "sass": "1.61.0",
     "sass-loader": "13.2.2",
+    "storybook": "7.0.2",
     "style-loader": "3.3.2",
     "ts-jest": "29.1.0",
     "ts-loader": "9.4.2",
-    "typescript": "<5",
-    "webpack": "5.77.0"
+    "typescript": "^5",
+    "webpack": "5.78.0"
   }
 }
